--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <div class="">
                     <div class="contact d-flex align-items-center">
                         <div class="contact-icon">
-                            <img src="/image/phone_green.svg" />
+                            <img src="image/phone_green.svg" />
                         </div>
                         <p><a href="tel:0904 999 222 ">0904 999 222 </a></p>
                         &nbsp;
                         &nbsp;
                         <div class="contact-icon">
-                            <img src="/image/phone_2_green.svg" />
+                            <img src="image/phone_2_green.svg" />
                         </div>
                         <p><a href="tel:024 37 345 678 ">024 37 345 678</a><br />
                             <a href="tel: 024 38 789 789 "> 024 38 789 789 </a></p>
@@ -42,9 +42,9 @@
             <div class="container">
                 <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                     aria-controls="collapseExample">
-                <img src="/image/menu.svg" /></a>
+                <img src="image/menu.svg" /></a>
                 <div class="search">
-                    <img src="/image/search-white_icon.svg" />
+                    <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
                     <li><a  class="active" href="/">Trang chủ</a></li>
@@ -72,13 +72,13 @@
     </header>
     <section class="main-content">
         <div class="banner">
-            <img src="/image/home-banner.jpg" />
+            <img src="image/home-banner.jpg" />
         </div>
         <div class="banner-intro">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="/image/home-slider.jpg" />
+                        <img src="image/home-slider.jpg" />
                     </div>
                     <div class="col-md-6">
                         <h4 class="headline">Nhà hàng kiến minh</h4>
@@ -103,8 +103,8 @@
         </div>
         <div class="banner-promo">
             <div class="container">
-                <img src="/image/uudai.png" />
-                <img src="/image/20per.png" />
+                <img src="image/uudai.png" />
+                <img src="image/20per.png" />
             </div>
         </div>
         <div class="container banner-menu">
@@ -172,13 +172,13 @@
                         <div class="col-md-4">
                             <div class="input-icons">
                                 <input type="date" placeholder="NGÀY" class="form-control" />
-                                <img class="input-icon" src="/image/calendar_icon.svg" />
+                                <img class="input-icon" src="image/calendar_icon.svg" />
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="input-icons">
                                 <input type="time" placeholder="GIỜ" class="form-control" />
-                                <img class="input-icon" src="/image/calendar_icon.svg" />
+                                <img class="input-icon" src="image/calendar_icon.svg" />
                             </div>
                         </div>
                     </div>
@@ -216,11 +216,11 @@
                     <div class="logo">
                         <img src="image/logo-white.png" />
                     </div>
-                    <a href="mailto:email@email.com"><img src="/image/email_icon.svg" />email@email.com </a>
-                    <a href="mailto:email@email.com"> <img src="/image/phone_icon.svg" /> 0904 999 222 </a>
-                    <a href="mailto:email@email.com"> <img src="/image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
+                    <a href="mailto:email@email.com"><img src="image/email_icon.svg" />email@email.com </a>
+                    <a href="mailto:email@email.com"> <img src="image/phone_icon.svg" /> 0904 999 222 </a>
+                    <a href="mailto:email@email.com"> <img src="image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
                     </a>
-                    <a href="mailto:email@email.com"> <img src="/image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
+                    <a href="mailto:email@email.com"> <img src="image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
                         Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
 
                 </div>
