--- a/menu.html
+++ b/menu.html
@@ -24,13 +24,13 @@
                 <div class="">
                     <div class="contact d-flex align-items-center">
                         <div class="contact-icon">
-                            <img src="/image/phone_green.svg" />
+                            <img src="image/phone_green.svg" />
                         </div>
                         <p><a href="tel:0904 999 222 ">0904 999 222 </a></p>
                         &nbsp;
                         &nbsp;
                         <div class="contact-icon">
-                            <img src="/image/phone_2_green.svg" />
+                            <img src="image/phone_2_green.svg" />
                         </div>
                         <p><a href="tel:024 37 345 678 ">024 37 345 678</a><br />
                             <a href="tel: 024 38 789 789 "> 024 38 789 789 </a></p>
@@ -42,9 +42,9 @@
             <div class="container">
                 <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                     aria-controls="collapseExample">
-                <img src="/image/menu.svg" /></a>
+                <img src="image/menu.svg" /></a>
                 <div class="search">
-                    <img src="/image/search-white_icon.svg" />
+                    <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
                     <li><a href="/">Trang chủ</a></li>
@@ -80,7 +80,7 @@
                     <div class="col-md-9">
                         <div class="product-list">
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -89,7 +89,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -98,7 +98,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -107,7 +107,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -116,7 +116,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -125,7 +125,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -134,7 +134,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -143,7 +143,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -152,7 +152,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -161,7 +161,7 @@
                             </div>
 
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -169,7 +169,7 @@
                                 </div>
                             </div>
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                             <div class="product-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
@@ -217,11 +217,11 @@
                     <div class="logo">
                         <img src="image/logo-white.png" />
                     </div>
-                    <a href="mailto:email@email.com"><img src="/image/email_icon.svg" />email@email.com </a>
-                    <a href="mailto:email@email.com"> <img src="/image/phone_icon.svg" /> 0904 999 222 </a>
-                    <a href="mailto:email@email.com"> <img src="/image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
+                    <a href="mailto:email@email.com"><img src="image/email_icon.svg" />email@email.com </a>
+                    <a href="mailto:email@email.com"> <img src="image/phone_icon.svg" /> 0904 999 222 </a>
+                    <a href="mailto:email@email.com"> <img src="image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
                     </a>
-                    <a href="mailto:email@email.com"> <img src="/image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
+                    <a href="mailto:email@email.com"> <img src="image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
                         Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
 
                 </div>
