--- a/news.html
+++ b/news.html
@@ -24,13 +24,13 @@
                 <div class="">
                     <div class="contact d-flex align-items-center">
                         <div class="contact-icon">
-                            <img src="/image/phone_green.svg" />
+                            <img src="image/phone_green.svg" />
                         </div>
                         <p><a href="tel:0904 999 222 ">0904 999 222 </a></p>
                         &nbsp;
                         &nbsp;
                         <div class="contact-icon">
-                            <img src="/image/phone_2_green.svg" />
+                            <img src="image/phone_2_green.svg" />
                         </div>
                         <p><a href="tel:024 37 345 678 ">024 37 345 678</a><br />
                             <a href="tel: 024 38 789 789 "> 024 38 789 789 </a></p>
@@ -42,9 +42,9 @@
             <div class="container">
                 <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                     aria-controls="collapseExample">
-                <img src="/image/menu.svg" /></a>
+                <img src="image/menu.svg" /></a>
                 <div class="search">
-                    <img src="/image/search-white_icon.svg" />
+                    <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
                     <li><a href="/">Trang chủ</a></li>
@@ -80,7 +80,7 @@
                     <div class="col-md-9">
                         <div class="news-list">
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -90,7 +90,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -100,7 +100,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -110,7 +110,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -120,7 +120,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -130,7 +130,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -140,7 +140,7 @@
                             </div>
 
                             <div class="news-item">
-                                <img src="/image/product-sample.jpg" />
+                                <img src="image/product-sample.jpg" />
                                 <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -169,21 +169,21 @@
                         <ul class="hot-news">
                             <li>
                                 <a href="/news-detail.html">
-                                    <img src="/image/product-sample.jpg" />
+                                    <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
                             </li>
 
                             <li>
                                 <a href="/news-detail.html">
-                                    <img src="/image/product-sample.jpg" />
+                                    <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
                             </li>
 
                             <li>
                                 <a href="/news-detail.html">
-                                    <img src="/image/product-sample.jpg" />
+                                    <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
                             </li>
@@ -200,11 +200,11 @@
                     <div class="logo">
                         <img src="image/logo-white.png" />
                     </div>
-                    <a href="mailto:email@email.com"><img src="/image/email_icon.svg" />email@email.com </a>
-                    <a href="mailto:email@email.com"> <img src="/image/phone_icon.svg" /> 0904 999 222 </a>
-                    <a href="mailto:email@email.com"> <img src="/image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
+                    <a href="mailto:email@email.com"><img src="image/email_icon.svg" />email@email.com </a>
+                    <a href="mailto:email@email.com"> <img src="image/phone_icon.svg" /> 0904 999 222 </a>
+                    <a href="mailto:email@email.com"> <img src="image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
                     </a>
-                    <a href="mailto:email@email.com"> <img src="/image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
+                    <a href="mailto:email@email.com"> <img src="image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
                         Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
 
                 </div>
