--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,13 @@
                 <div class="">
                     <div class="contact d-flex align-items-center">
                         <div class="contact-icon">
-                            <img src="/image/phone_green.svg" />
+                            <img src="image/phone_green.svg" />
                         </div>
                         <p><a href="tel:0904 999 222 ">0904 999 222 </a></p>
                         &nbsp;
                         &nbsp;
                         <div class="contact-icon">
-                            <img src="/image/phone_2_green.svg" />
+                            <img src="image/phone_2_green.svg" />
                         </div>
                         <p><a href="tel:024 37 345 678 ">024 37 345 678</a><br />
                             <a href="tel: 024 38 789 789 "> 024 38 789 789 </a></p>
@@ -42,9 +42,9 @@
             <div class="container">
                 <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                     aria-controls="collapseExample">
-                <img src="/image/menu.svg" /></a>
+                <img src="image/menu.svg" /></a>
                 <div class="search">
-                    <img src="/image/search-white_icon.svg" />
+                    <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
                     <li><a href="/">Trang chủ</a></li>
@@ -82,13 +82,13 @@
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. </p>
                         <div class="social-icon">
-                            <a href="mailto:email@email.com"><img src="/image/emailb_icon.svg" />email@email.com </a>
-                            <a href="mailto:email@email.com"> <img src="/image/phoneb_icon.svg" /> 0904 999 222 </a>
-                            <a href="mailto:email@email.com"> <img src="/image/teleb_icon.svg" /> 024 37 345 678 - 024
+                            <a href="mailto:email@email.com"><img src="image/emailb_icon.svg" />email@email.com </a>
+                            <a href="mailto:email@email.com"> <img src="image/phoneb_icon.svg" /> 0904 999 222 </a>
+                            <a href="mailto:email@email.com"> <img src="image/teleb_icon.svg" /> 024 37 345 678 - 024
                                 38
                                 789 789
                             </a>
-                            <a href="mailto:email@email.com"> <img src="/image/locationb_icon.svg" /> Chân Cầu Vượt Phú
+                            <a href="mailto:email@email.com"> <img src="image/locationb_icon.svg" /> Chân Cầu Vượt Phú
                                 Thụy
                                 Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
                         </div>
@@ -110,11 +110,11 @@
                     <div class="logo">
                         <img src="image/logo-white.png" />
                     </div>
-                    <a href="mailto:email@email.com"><img src="/image/email_icon.svg" />email@email.com </a>
-                    <a href="mailto:email@email.com"> <img src="/image/phone_icon.svg" /> 0904 999 222 </a>
-                    <a href="mailto:email@email.com"> <img src="/image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
+                    <a href="mailto:email@email.com"><img src="image/email_icon.svg" />email@email.com </a>
+                    <a href="mailto:email@email.com"> <img src="image/phone_icon.svg" /> 0904 999 222 </a>
+                    <a href="mailto:email@email.com"> <img src="image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
                     </a>
-                    <a href="mailto:email@email.com"> <img src="/image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
+                    <a href="mailto:email@email.com"> <img src="image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
                         Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
 
                 </div>
